# libmultifinder

./: CMakeLists.txt  Changelog.txt  LICENSE.txt  README.md
doc/: Doxyfile
include/: multifinder.h
lib/: multifinder.c
src/: multifinder_count.c  multifinder_replace.c
